\name{batchelornews}
\title{batchelor News}
\encoding{UTF-8}

\section{Version 1.8.0}{\itemize{
\item Migrate \code{findMutualNN()} to \pkg{BiocNeighbors}.

\item Support \code{d=NA} in \code{multiBatchPCA()} for more convenient disabling of PCA in calling functions.

\item Bugfix for \code{d=NA} with specified \code{subset.row=} in \code{fastMNN()}.

\item Added the \code{applyMultiSCE()} function to easily apply functions across main/alternative Experiments from multiple SingleCellExperiment inputs.

\item Added the \code{mnnDeltaVariance()} function to compute diagnostics from the variances of the differences between MNN pairs.

\item Added the \code{quickCorrect()} function to quickly perform intersection, normalization, feature selection and correction.

\item Added some clustering-based diagnostics (\code{clusterAbundanceVar()}, \code{clusterAbundanceTest()} and \code{compareMergedClusters()}) from the OSCA book.

\item File-backed matrices are now realized into memory prior to \code{multiBatchPCA()}. 
}}

\section{Version 1.6.0}{\itemize{
\item Allow \code{regressBatches()} to operate without \code{batch=} when \code{design=} is provided.
Added \code{d=} and related options to conveniently perform a PCA on the \linkS4class{ResidualMatrix}.

\item Added \code{correct.all=} option to all correction functions for consistency.

\item Added a \code{deferred=TRUE} default to \code{multiBatchPCA} and its callers,
to encourage use of deferred matrix multiplication for speed.

\item Switched default PCA algorithm in \code{multiBatchPCA} to \linkS4class{IrlbaParam}.

\item Added \code{add.single=} mode for endomorphic addition of correction results in \code{correctExperiments()}.
}}

\section{Version 1.4.0}{\itemize{
\item Support the use of arbitrary design matrices in \code{regressBatches()}.

\item Allow lists of objects to be directly passed into the \code{...} for many functions.
